<resources>
    <string name="app_name">Tech Intellect</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_login">Login</string>
    <string name="register_fname">Full Name</string>
    <string name="register_email">Email address</string>
    <string name="register_pwd">Password</string>
    <string name="register_cnfrm_pwd">Confirm Password</string>
    <string name="fp_forgotPasswordStr">Forgot your password?</string>
    <string name="fp_NPstr">No Problem!!</string>
    <string name="fp_enterEmailStr">Enter your email address to reset password</string>
    <string name="fp_emailHintStr">Enter email address</string>
    <string name="submitBtnStr">Submit</string>
    <string name="Tab1">Tab1</string>
    <string name="Tab2">Tab2</string>
    <string name="Choosing_topic">Choose a Topic</string>
    <string name="Choosing_difficulty">Choose Difficulty</string>
    <string name="Choosing_mode">Choose mode</string>
    <string name="Start_learning">Start</string>

    <string name="hint_email">Email</string>
    <string name="content_logo">Logo</string>
    <string name="icon_email">Email icon</string>
    <string name="icon_password">Password icon</string>
    <string name="hint_password">Password</string>
    <string name="btn_signIn">Sign in</string>
    <string name="link_forgotPwd">Forgot Password?</string>
    <string name="text_signUp">New to intellect?</string>
    <string name="link_signUp">Sign Up</string>
    <string name="text_or">-------------------------------------  Or  --------------------------------------</string>
    <string name="btn_signInGuest">Sign in as a Guest</string>

    <string name="cp_changePasswordStr">Change Password</string>
    <string name="cp_oldPasswordStr">Old Password</string>
    <string name="cp_newPasswordStr">New Password</string>
    <string name="cp_confirmNewPwStr">Confirm New Password</string>
    <string name="menubar_item_zero">Help</string>
    <string name="menubar_item_one">Settings</string>
    <string name="menubar_item_two">Logout</string>
    <string name="haptic_feedback">Vibrate</string>
    <string name="haptic_key">haptic</string>
    <string name="title_activity_settings">Settings</string>
    <string name="summary_vibrate">Vibrate on wrong answer</string>

    <string name="quiz_difficultyStr">Easy</string>
    <string name="quiz_nameStr">Quiz 1: NLP</string>
    <string name="quiz_questionMain">Q1. One of the main challenges in NLP is</string>
    <string name="quiz_optionAstr">Handling Ambiguity of Sentences</string>
    <string name="quiz_optionBstr">Handling Tokenization</string>
    <string name="quiz_optionCstr">Handling POS-Tagging</string>
    <string name="quiz_optionDstr">All of the above</string>
    <string name="quiz_nextBtnStr">Next</string>
    <string name="quiz_feedbackStr">Sorry, Answer is incorrect!!</string>
    <string name="quit_test">Quit</string>
    <string name="quiz_completed">You have successfully completed the Quiz!</string>
    <string name="main_menu_button">Yes, take me home!</string>
    <string name="main_menu">Want to learn more?</string>
    <string name="congrats">Congratulations!</string>
    <string name="txtTimer">%1$s : %2$s</string>

    <string name="changePassword_key">Change Password</string>
    <string name="change_password">Change Password</string>

    <string name="application_intro">Tech Intellect is a technical quiz application that tests the users on some interesting topics like
        Natural Language Processing, Computer Science Acronyms, R Programming, and Google go.
    </string>
    <string name="FAQ">FAQ</string>
    <string name="faq_1">How to sign in to the application?</string>
    <string name="faq_1_ans">You can sign in to the application using the registered email address and password.
        Users can also use the app by signing in as a guest.
    </string>
    <string name="faq_2">How to choose the topic and difficulty level?</string>
    <string name="faq_2_ans">Tech Intellect allows users to choose their level of expertise.This can be done by signing into the app and
        navigating to the home screen. The home screen let the users choose their topic, difficulty level, and the mode of the quiz.
    </string>
    <string name="faq_3">What are timed and endless modes?</string>
    <string name="faq_3_ans">The application delivers the quiz to users in two different modes, namely Timed and Endless.
        Timed mode forces the users to finish the quiz within a stipulated time depending on the difficulty level and
        Endless mode allows the users to take the quiz and learn on their own pace.
    </string>
    <string name="faq_4">What is the use of dashboard?</string>
    <string name="faq_4_ans">The dashboard allows the users to revisit their past learning history. Once a quiz is successfully completed, the
        corresponding quiz will be created dynamically under the dashboard tab. On clicking it, users can go through the questions and answers
        that was asked in the quiz. Note that this feature is not available for guest users.
    </string>
    <string name="faq_5">What if I forget my password?</string>
    <string name="faq_5_ans">Registered users can reset their password using the forgot password screen. The users would be notified by an email
        for resetting the password.
    </string>
    <string name="faq_6">How to control the vibration and buzzer sound?</string>
    <string name="faq_6_ans">Both vibration and buzzer sound features can be turned on/off under the settings menu.
    </string>

    <string name="contact">Contact us</string>
    <string name="further_queries">For further queries, please feel free to reach us at: </string>
    <string name="email">haritha.desikan@dal.ca</string>
    
    <string name="sound_key">sound</string>
    <string name="buzzer_sound">Buzzer</string>
    <string name="summary_buzzer_sound">Buzzer sound for right and wrong answer</string>

</resources>
