<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/help_screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_screen_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/application_intro"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:padding="10dp"
            android:gravity="start"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/FAQ_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/FAQ"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faq_ques_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_1"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_1_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>
        />

        <TextView
            android:id="@+id/faq_ques_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_2"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_2_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ques_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_3"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_3_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ques_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_4"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_4_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ques_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_5"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_5_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ques_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/faq_6"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/faq_ans_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/faq_6_ans"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feel_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/further_queries"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:padding="10dp"
            android:gravity="start"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/help_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:padding="10dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>
</ScrollView>